<resources>
    <string name="app_name">DesginBP</string>

    <string name="step1">Don\'t smoke,exercise, or drink caffeine or alcohol 30 min prior to measurement</string>
    <string name="step2">Left arm resting comfortably at heart level</string>
    <string name="step3">Don\'t talk</string>
    <string name="step4">Sit still in a chair with back supported,legs uncrossed</string>
    <string name="step5">Cuff positioning (bottom of cuff above the bend of elbow)</string>
    <string name="step6">Cuff sizing instructions</string>

    <string name="video_alert">While you rest, let\'s review how to correctly measure blood pressure</string>

</resources>
