<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PROPER BLOOD PRESSURE MEASURING INSTRUCTIONS"
        android:textAlignment="center"
        android:textColor="#171717"
        android:padding="10dp"
        android:textSize="@dimen/_14ssp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c8c8c8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_14sdp"
            android:src="@drawable/ic_checked"
            android:layout_marginTop="1dp"
            android:layout_weight="1"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textColor="#858585"
            android:gravity="center_vertical"
            android:textSize="@dimen/_12ssp"
            android:layout_weight="0.1"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_14sdp"
                android:src="@drawable/ic_checked"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step2"
                android:textColor="#858585"
                android:gravity="center_vertical"
                android:textSize="@dimen/_12ssp"
                android:layout_weight="0.1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_14sdp"
                android:src="@drawable/ic_checked"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step3"
                android:textColor="#858585"
                android:gravity="center_vertical"
                android:textSize="@dimen/_11ssp"
                android:layout_weight="0.1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_14sdp"
                android:src="@drawable/ic_checked"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step4"
                android:textColor="#858585"
                android:gravity="center_vertical"
                android:textSize="@dimen/_11ssp"
                android:layout_weight="0.1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_14sdp"
                android:src="@drawable/ic_checked"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step5"
                android:textColor="#858585"
                android:gravity="center_vertical"
                android:textSize="@dimen/_11ssp"
                android:layout_weight="0.1"/>

        </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="#c8c8c8"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:id="@+id/dailog_ok_button"
        android:textSize="@dimen/_14ssp"
        android:textColor="#017cef"
        android:background="@android:color/white"/>

</LinearLayout>
